<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_brew_title_text"
        android:textAlignment="center"
        android:textColor="@color/blue"
        android:textSize="25sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="75dp"
        android:gravity="center_vertical"
        android:id="@+id/brew_name_title"
        android:padding="10dp"
        android:text="@string/brew_name_title_text"
        android:textAlignment="center"
        android:textColor="@color/blue"
        android:textSize="14sp"
        android:layout_alignParentTop="true"/>

    <com.beardedhen.androidbootstrap.BootstrapEditText
        android:id="@+id/brew_name"
        android:layout_width="302dp"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:inputType="textPassword"
        android:textColor="@android:color/black"
        android:textColorHint="#D3D3D3"
        app:bootstrapSize="md"
        app:roundedCorners="true"
        android:layout_below="@+id/brew_name_title"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:gravity="center_vertical"
        android:padding="10dp"
        android:text="@string/recipe_name_text"
        android:textAlignment="center"
        android:textColor="@color/blue"
        android:textSize="14sp"
        android:id="@+id/textView"
        android:layout_below="@+id/brew_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="39dp"/>

    <com.beardedhen.androidbootstrap.BootstrapEditText
        android:id="@+id/brew_recipe_name"
        android:layout_width="302dp"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:inputType="textPassword"
        android:textColor="@android:color/black"
        android:textColorHint="#D3D3D3"
        app:bootstrapSize="md"
        app:roundedCorners="true"
        android:layout_below="@+id/textView"
        android:layout_alignStart="@+id/choose_brew_recipe_button"/>

    <com.beardedhen.androidbootstrap.BootstrapButton
        android:id="@+id/choose_brew_recipe_button"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:text="@string/create_new_brew_recipe_text"
        app:bootstrapBrand="info"
        app:bootstrapSize="lg"
        app:buttonMode="regular"
        app:roundedCorners="true"
        app:showOutline="false"
        android:layout_below="@+id/brew_recipe_name"
        android:layout_alignStart="@+id/brew_name"
        android:layout_marginTop="44dp"/>

    <com.beardedhen.androidbootstrap.BootstrapButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:id="@+id/start_button"
        android:text="@string/start_text"
        android:background="@drawable/circle_background"
        app:bootstrapBrand="info"
        app:bootstrapSize="lg"
        app:buttonMode="regular"
        app:roundedCorners="true"
        app:showOutline="false"
        />

</RelativeLayout>