<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/graphViewTitle"
        android:id="@+id/graphViewTitle"
        android:layout_gravity="center_horizontal"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"/>

    <org.eazegraph.lib.charts.ValueLineChart
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/brewLineChart"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@id/graphViewTitle"
        app:egUseCubic="true"
        app:egUseOverlapFill="true"
        app:egCurveSmoothness="0.4"
        app:egIndicatorLineColor="#FE6DA8"
        app:egLegendHeight="40dp"
        app:egShowStandardValue="true"/>

    <com.beardedhen.androidbootstrap.BootstrapButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:id="@+id/start_fetch_button"
        android:text="@string/start_fetch_text"
        app:bootstrapBrand="info"
        app:bootstrapSize="lg"
        app:buttonMode="regular"
        app:roundedCorners="true"
        app:showOutline="false"
        />

    <com.beardedhen.androidbootstrap.BootstrapButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/fetch_button"
        android:text="@string/fetch_text"
        app:bootstrapBrand="info"
        app:bootstrapSize="lg"
        app:buttonMode="regular"
        app:roundedCorners="true"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true"/>
</RelativeLayout>